--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,9 @@ body {
   background-color: aquamarine;
   user-select: none;
 }
+
+.image {
+  width: 300px;
+  height: 300px;
+  background-image: url(./images/weather-img/sun.png);
+}
